@@ -572,6 +572,10 @@ All (GUI):
 - Set correct cursor when the mouse is over image map links in wxHTML (LukasK).
 - Add wxPropertyGridPageState::GetColumnFullWidth() (Teodor Petrov).
 
+wxGTK:
+
+- Fix wxMenu::GetTitle() before the menu is appended to the bar (David Hart).
+
 wxMSW:
 
 - It is now possible to tab into radio boxes again.
